--- a/requirements.txt
+++ b/requirements.txt
@@ -1,105 +1,102 @@
-git+git://github.com/GoodCloud/django-ajax-uploader.git
-git+git://github.com/skoczen/qi-toolkit.git
-djangosanetesting==0.5.11
-git+git://github.com/kmmbvnr/django-jenkins.git
-git+git://github.com/skoczen/nose-xcover.git
-django-picklefield==0.1.9
-django-subdomains==1.1.2
-django-staticfiles==1.2.1
-git+git://github.com/GoodCloud/django-longer-username.git
-git+git://github.com/GoodCloud/django-functional-tests
-#git+git://github.com/GoodCloud/tavutil.git
-#git+git://github.com/GoodCloud/bolt.git
-#git+git://github.com/GoodCloud/django_compressor.git
-django-compressor==1.1.2
-Fabric==1.3.1
-mercurial==1.9.3
-python-dateutil==1.5
-PIL==1.1.7
-psycopg2
-python-memcached==1.47
-gunicorn==0.13.4
-pyparsing==1.5.6
-django-xmlrpc==0.1.3
-akismet==0.2.0
+-e git://github.com/PaulUithol/backbone-tastypie.git@dea127c99af91a203037a9a5e5bfaa43f8e558ff#egg=Backbone_tastypie-dev
 BeautifulSoup==3.2.0
-django-extensions==0.7.1
-python-crontab==0.9.6
-django-analytical==0.12.1
-django-pagination==1.0.7
-sorl-thumbnail==11.09
-tagging==0.2.1
-lorem-ipsum-generator==0.3
-nose==1.1.2
-django-nose==0.1.3
-# nose-exclude==0.1.7
-celery-with-redis
-django-celery==2.2.4
-coverage==3.5.1
-django-taggit==0.9.3
-django-taggit-templatetags==0.4.6dev
-boto==2.0rc1
-django-ses==0.2
-django-storages==1.1.3
-slimmer==0.1.30
-django-debug-toolbar==0.8.5
-django-balancer==0.3
-xlwt==0.7.2
-xlrd==0.7.1
-xlutils==1.4.1
-django-newsletter==0.2.6
-vobject==0.8.1c
-django-tinymce==1.5.1a2
-chardet==1.0.1
-pycurl==7.19.0
-stripe==1.5.27
-py-bcrypt==0.2
-django-zebra==0.4.2
-pytz==2011k
-html5lib==0.90
-## The following requirements were added by pip --freeze:
-git+git://github.com/PaulUithol/backbone-tastypie.git
 CherryPy==3.2.2
-django==1.3.1
+Django==1.3.1
+Fabric==1.3.1
 GitPython==0.3.2.RC1
 Mezzanine==0.11.5
 MySQL-python==1.2.3
+PIL==1.1.7
 PyYAML==3.10
 South==0.7.3
+-e git://github.com/GoodCloud/django-ajax-uploader.git@c9134bc454adad9d8ff83e76c6b7bc928f055b3b#egg=ajaxuploader-dev
+akismet==0.2.0
 amqplib==1.0.2
 anyjson==0.3.1
 async==0.6.1
+boto==2.0rc1
+celery==2.5.1
+celery-with-redis==2.5
+chardet==1.0.1
+coverage==3.5.1
+django-analytical==0.12.1
 django-appconf==0.4.1
+django-balancer==0.3
 django-cachebuster==0.2.1
+django-celery==2.2.4
+django-compressor==1.1.2
+django-debug-toolbar==0.8.5
+django-extensions==0.7.1
 django-indexer==0.3.0
+-e git://github.com/kmmbvnr/django-jenkins.git@e5031e9254e172aff1dee1e92b5e2609235612f9#egg=django_jenkins-dev
+django-newsletter==0.2.6
+django-nose==0.1.3
+django-pagination==1.0.7
 django-paging==0.2.4
+django-picklefield==0.1.9
+django-ses==0.2
+django-staticfiles==1.2.1
+django-storages==1.1.3
+django-subdomains==1.1.2
+django-taggit==0.9.3
+django-taggit-templatetags==0.4.6dev
 django-tastypie==0.9.10
 django-templatetag-sugar==0.1
-git+git://github.com/GoodCloud/django-timezones.git
+-e git://github.com/GoodCloud/django-timezones.git@cff53196b80711a71ca2a1d9bde54205711a3c1d#egg=django_timezones-dev
+django-tinymce==1.5.1a2
+django-xmlrpc==0.1.3
+django-zebra==0.4.2
+djangosanetesting==0.5.11
 errorhandler==1.1.1
 eventlet==0.9.16
 filebrowser-safe==0.1.2
+-e git://github.com/GoodCloud/django-functional-tests@d7ddf59ace06b64bdf738c7ae952ce0e6b51725f#egg=functional_tests-dev
 gitdb==0.5.2
 grappelli-safe==0.1.8
 greenlet==0.3.1
-ipaddr==2.1.9
-git+git://github.com/GoodCloud/johnny-cache.git
-kombu==1.1.3
+gunicorn==0.13.4
+html5lib==0.90
+ipaddr==2.1.10
+ipython==0.11
+johnny-cache==0.3.3
+kombu==2.1.4
 lockfile==0.9.1
 logilab-astng==0.23.0
 logilab-common==0.57.1
+-e git://github.com/GoodCloud/django-longer-username.git@cdf0375ec5eadd4a4c12d1c4598e689b8b33a496#egg=longerusername-dev
+lorem-ipsum-generator==0.3
 lxml==2.3.2
+mercurial==1.9.3
 mimeparse==0.1.3
+nose==1.1.2
+nose-exclude==0.1.7
+-e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-dev
 optcomplete==1.2-devel
 paramiko==1.7.7.1
-pycrypto==2.4
+py-bcrypt==0.2
+pycrypto==2.3
+pycurl==7.19.0
 pylint==0.25.0
+pyparsing==1.5.6
+python-crontab==0.9.6
 python-daemon==1.6
+python-dateutil==1.5
 python-digest==1.7
+python-memcached==1.47
+pytz==2011k
+-e git://github.com/skoczen/qi-toolkit.git@e5b5889e9edd7346c5cccf096e389505b21eed37#egg=qi_toolkit-dev
 raven==0.6.1
+redis==2.4.11
 simplejson==2.2.1
+slimmer==0.1.30
+sorl-thumbnail==11.09
 ssh==1.7.8
-tornado==2.1.1
+stripe==1.5.27
+tagging==0.2.1
+tornado==2.2
 unittest2==0.5.1
+vobject==0.8.1c
 wsgiref==0.1.2
-
+xlrd==0.7.1
+xlutils==1.4.1
+xlwt==0.7.2
